Title: Implement Aljabr Integration Roadmap for Tafkir ML Framework
Key features implemented:
- Created new module ml:tafkir-ml-aljabr with TafkirTensor wrapping Aljabr's Tensor API
- Implemented core tensor operations (matmul, add, sub, mul, div, reshape, transpose) delegating to Aljabr backends
- Added autograd bridge ml:tafkir-ml-aljabr/src/main/java/tech/kayys/tafkir/ml/autograd/TafkirAutograd.java using Aljabr's AutogradEngine
- Developed new trainer module trainer:tafkir-trainer-aljabr with real training loop using Aljabr backends
- Introduced TafkirModel, TafkirLoss, TafkirOptimizer interfaces and implementations (TafkirAdam, TafkirSGD)
- Updated examples (hello_tafkir.java, mnist_style_setup.java) to use new Aljabr-backed APIs
- Modified settings.gradle.kts to include new modules and configure Aljabr dependency substitution
- Added INTEGRATION_ROADMAP.md and INTEGRATION_COMPLETE.md documenting the migration strategy
- Updated .gitignore to exclude log files including hs_err_pid*.log

This commit implements the complete integration roadmap, replacing the legacy GradTensor implementation with a thin wrapper over Aljabr's efficient tensor and autograd engine, enabling proper training capabilities.